@@ -1,3 +1,7 @@
+2006-08-11    <tino@firebird.03.softkill.net>
+
+	* proc.h (tino_wait_child_exact): added
+
 2006-08-01    <tino@firebird.03.softkill.net>
 
 	* Makefile-tar.sh (tagcvs): Bug in checking of "make dist" fixed
